feat: add errorresponse
