# internal/handlers/error_dto.go
@@ -1,0 +1,5 @@
+package handlers
+
+type ErrorResponse struct {
+	Message string `json:"message" example:"error"`
+}
